# mq-playground

./: README.md
py/: .pdm.toml  producer.py  pyproject.toml
py/proj/: celery.py  celeryconfig.py  tasks.py
redis/: values.yaml
scripts/: down.sh  up.sh  update.sh
