[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yifan Wu", email = "tyivanwu@gmail.com"},
]
dependencies = [
    "celery[redis]>=5.2.7",
    "flower>=1.2.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
